# modemproxy

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIG.md  RELAY-VPS.md  ROADMAP.md
modemproxy/: __init__.py  cli.py  config.py  db.py
modemproxy/modems/: control.py  manager.py  netdev.py
modemproxy/proxy/: generator.py
modemproxy/proxy/templates/: 3proxy.cfg.j2
modemproxy/services/: alerts.py  autoreboot.py  bandwidth.py  customers.py  metrics.py  openvpn.py  publish.py  quota.py  subscriptions.py  tests.py  ttl.py  tunnel.py
modemproxy/web/: app.py
modemproxy/web/static/: style.css
modemproxy/web/templates/: _modem_rows.html  activity.html  app_base.html  bandwidth.html  base.html  dashboard.html  login.html  panel.html  panel_login.html  pool.html  settings.html
systemd/: modemproxy-bandwidth.service  modemproxy-bandwidth.timer  modemproxy-expiry.service  modemproxy-expiry.timer  modemproxy-frpc.service  modemproxy-pinger.service  modemproxy-pinger.timer  modemproxy-proxy@.service  modemproxy-quota.service  modemproxy-quota.timer  modemproxy-rotator.service  modemproxy-rotator.timer  modemproxy-tunnel.service  modemproxy-vpn@.service  modemproxy-web.service
tests/: conftest.py  test_advanced.py  test_api.py  test_bandwidth_quota.py  test_customers.py  test_db.py  test_generator.py  test_netdev.py  test_openvpn_metrics.py  test_publish.py  test_subscriptions.py
udev/: 99-modemproxy.rules
